--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-	"name": "obsidian-sample-plugin",
+	"name": "obsidian-set-replace",
 	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"description": "An Obsidian plugin to replace predefined characters with other characters",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
 		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
 		"version": "node version-bump.mjs && git add manifest.json versions.json"
 	},
-	"keywords": [],
+	"keywords": ["obsidian", "plugin", "character", "replace", "text"],
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
